@@ -1,4 +1,4 @@
-# $Id: GNUmakefile,v 1.2 1999-12-15 18:06:43 gracia Exp $
+# $Id: GNUmakefile,v 1.3 2000-02-14 13:44:01 gcosmo Exp $
 # -------------------------------------------------------------
 # GNUmakefile for STEP library.  Gabriele Cosmo, 15/11/96.
 # -------------------------------------------------------------
@@ -7,6 +7,10 @@ name := G4step
 
 ifndef G4INSTALL
   G4INSTALL = ../../../..
+endif
+
+ifneq (,$(findstring DEC-cxx,$(G4SYSTEM)))
+  G4DEBUG := 1
 endif
 
 include $(G4INSTALL)/config/architecture.gmk
@@ -19,7 +23,8 @@ CPPFLAGS  += \
 include $(G4INSTALL)/config/common.gmk
 
 # Fix for ISO AP203 geometry standard files to be always compiled without optimization.
-
+# Compilation on DEC-cxx must moreover happen with no optimisation level AND debug.
+#
 CXXFLAGS_WITHOUT_O := $(filter-out -O% , $(CXXFLAGS))
 CXXFLAGS_WITHOUT_O := $(filter-out +O% , $(CXXFLAGS_WITHOUT_O))
 
@@ -27,8 +32,6 @@ $(G4TMP)/$(G4SYSTEM)/$(name)/SdaiCONFIG_CONTROL_DESIGN.o: src/SdaiCONFIG_CONTROL
 	$(CXX) $(CXXFLAGS_WITHOUT_O) $(CPPFLAGS) -c $(OUT_OBJ)$@ src/SdaiCONFIG_CONTROL_DESIGN.cc
 $(G4TMP)/$(G4SYSTEM)/$(name)/SdaiCONFIG_CONTROL_DESIGN_init.o: src/SdaiCONFIG_CONTROL_DESIGN_init.cc
 	$(CXX) $(CXXFLAGS_WITHOUT_O) $(CPPFLAGS) -c $(OUT_OBJ)$@ src/SdaiCONFIG_CONTROL_DESIGN_init.cc
-
-
 
 ifneq (,$(findstring WIN32-VC,$(G4SYSTEM)))
   CXXFLAGS_WITH_ZM = $(filter-out -Zm%,$(CXXFLAGS)) -Zm500
