@@ -1,4 +1,4 @@
-$Id: History,v 1.1 2000-02-14 12:24:00 gcosmo Exp $
+$Id: History,v 1.2 2000-02-14 13:44:02 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -18,6 +18,15 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+February 14, 2000	Gabriele Cosmo (STEP-V01-00-01)
+- Fixes for porting on supported platforms/compilers:
+  o STEPfile.h: removed declaration of function HeaderId(int)
+    since not used and NOT implemented;
+  o sdai[.h.cc]: replaced use of MAXLONG and MINFLOAT with LONG_MAX
+    and FLT_MIN respectively.
+  o STEPfile_inline.cc: added explicit cast to float in argument for
+    'ceil' function.
 
 January 31, 2000	Gabriele Cosmo (STEP-V01-00-00)
 - Upgraded NIST STEP Reader to SCL (STEP Class Library) 3.2.
